fix overflow

--- a/src/index.css
+++ b/src/index.css
@@ -6,7 +6,7 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   max-width: 100vw;
-  overflow: 'hidden';
+  overflow: hidden;
 }
 
 code {
@@ -50,8 +50,6 @@ body {
   /* border:1px solid #cccccc */
 }
 
-.list-item.active {
-}
 
 .list-item.active:after
 {content:'';
@@ -94,7 +92,7 @@ body {
   animation-direction: alternate;
   animation-timing-function: ease-in-out;
   cursor:pointer;
-  position: absolute;
+  position: fixed;
   z-index: 100;
   background: #000000;
   padding: 10px 30px;
@@ -120,7 +118,7 @@ body {
     background-size:  80% auto;
   }
   .title{
-    font-size: 50px;
+    font-size: 9vw;
   }
   .icon{
     animation-duration: 10s;
